<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Echinoidea</string>
    <string name="username">"Username"</string>
    <string name="QR_code">QR code</string>
    <string name="option_account">"Username"</string>
    <string name="already_have_account">"Already have an account ?"</string>
    <string name="re_pass">"Re-enter password"</string>
    <string name="phone_number">"Phone number"</string>
    <string name="didnt_have_account">"Didn't have any account?"</string>
    <string name="forgot_password">"Forgot your password?"</string>
    <string name="forgot_password_description">"Please insert your username and recovery email of your account for verification"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="reset_password">"Reset your password"</string>
    <string name="prompt_password">Password</string>
    <string name="verify_password">"Verify"</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_in1">Sign In</string>
    <string name="action_sign_up1">Sign Up</string>
    <string name="welcome">"Welcome to Echinoidea"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="language_title">"Language"</string>
    <string name="theme_title">"Theme"</string>
    <string name="setting_title">"Settings"</string>
    <string name="setting_account">"Account Information"</string>
    <string name="setting_account_title">"Account"</string>
    <string name="setting_security">"Reset Password"</string>
    <string name="setting_anonymous">"Anonymous User"</string>
    <string name="setting_delete">"Delete Account"</string>
    <string name="setting_map">"Map"</string>
    <string name="setting_detect_notification">"Detect Notification"</string>
    <string name="setting_notification_title">"Notification"</string>
    <string name="setting_warn_notification">"Warn Notification"</string>
    <string name="setting_support">"Support"</string>
    <string name="setting_report_bugs">"Report Bugs"</string>
    <string name="setting_terms_policy">"Terms &amp; Policy"</string>
    <string name="setting_display">"Display"</string>
    <string name="setting_language">"Language"</string>
    <string name="setting_theme">"Theme"</string>
    <string name="setting_switch_account">"Switch Account"</string>
    <string name="setting_logout">"Logout"</string>
    <string name="version">"Version 1.0.0 \n Made by hi3r1ss, harrylee02, Howf and Bacann"</string>
    <string name="setting_support_referrals">"Support &amp; Referrals"</string>
    <string name="option_achievement">"Achievement"</string>
    <string name="option_history_log">"History Log"</string>
    <string name="option_profile">"Profile"</string>"
    <string name="potholes_detected_per_day">"Pothole types detected this week"</string>"
    <string name="option_open_map">"Open map"</string>
    <string name="potholes_detected_today">"Potholes detected this week"</string>
    <string name="empty_username">"Username can't be empty"</string>
    <string name="empty_password">"Password can't be empty"</string>
    <string name="account_doesnt_exist">"Username doesn't exist"</string>
    <string name="wrong_pass">"Ivalid credentials"</string>
    <string name="rule_password">"Password must be at least 8 characters long"</string>"
    <string name="empty_confirm_pass">"Confirm password can't be empty"</string>
    <string name="pass_didnt_match">"Password didn't match"</string>
    <string name="empty_email">"Email can't be empty"</string>
    <string name="empty_phonenumber">"Phone Number can't be empty"</string>
    <string name="invalid_email">"Invalid email"</string>
    <string name="rule_phone">"Phone Number must be 10 digits long"</string>
    <string name="dark_theme">"Dark Theme"</string>
    <string name="light_theme">"Light Theme"</string>
    <string name="today_detected">"Today detected:"</string>
    <string name="activity_center_title">"Activity center"</string>
    <string name="account_info">"Account informations"</string>
    <string name="pass_setting">"Password setting"</string>
    <string name="delete_account">"Delete account"</string>
    <string name="enter_otp">"Please enter your digital OTP before going to the next step"</string>"
    <string name="verify_title">"Verify Your Digital OTP"</string>
    <string name="set_route">"Set route"</string>
    <string name="search_option">"Search for a location..."</string>
    <string name="pothole_detetion">"Pothole detection"</string>
    <string name="pothole_warning">"Pothole warning"</string>
    <string name="pothole_news">"Pothole news"</string>
    <string name="about_you">"About you"</string>
    <string name="nickname">"Nickname:"</string>
    <string name="username2">"Username:"</string>
    <string name="phone_number2">"Phone number:"</string>
    <string name="prompt_email2">"Email:"</string>
    <string name="your_stats">"Your stats"</string>
    <string name="anonymous_user">"Anonymous user"</string>
    <string name="manage_devices">"Manage devices"</string>
    <string name="two_fa_factor">"2FA factor"</string>
    <string name="opt_fail">"Digital OTP hasn't been set"</string>
    <string name="opt_fail_description">"Please set your digital OTP to secure your account"</string>
    <string name="set_otp">"Set Digital OTP"</string>
    <string name="verify_email">"Verify 6-digits OTP"</string>
    <string name="verify_email_description">"We’ve sent a 6-digits OTP to your phone number. Please check your message."</string>
    <string name="check_the_verification">"Verify the OTP"</string>
    <string name="resend_otp">"Send the OTP"</string>
    <string name="terms_setting">"Terms"</string>
    <string name="didnt_set_otp">"You didn't set your digital OTP"</string>
    <string name="email_doesnt_match">"Email doesn't match"</string>
    <string name="reset_pass_success">"Verify success, please enter your new password and confirm it"</string>
    <string name="update_pass_success">"Password updated successfully"</string>
    <string name="invalid_otp">"Please enter a valid OTP"</string>
    <string name="otp_correct">"OTP is correct"</string>
    <string name="otp_incorrect">"OTP is incorrect"</string>
    <string name="user_not_found">"User not found"</string>
    <string name="sent_verify_email_success">"Verification email sent"</string>
    <string name="sent_verify_email_fail">"Failed to send verification email"</string>
    <string name="register_fail">"Registration fail"</string>
    <string name="no_username">"No username provided"</string>
    <string name="set_opt_success">"Digital OTP set successfully"</string>
    <string name="email_verify_success">"Email verified successfully!"</string>
    <string name="email_verify_warning">"Please verify your email first"</string>
    <string name="fail_reload_user">"Failed to reload user"</string>
    <string name="currently_logged">"No user is currently logged in"</string>
    <string name="sign_up_success">"Signed up successfully!"</string>
    <string name="login_success">Login successful!"</string>
    <string name="invalid_qrcode">"Invalid or already used QR Code"</string>
    <string name="session_id_not_found">"Session ID not found"</string>
    <string name="scan_cancelled">"Scan cancelled"</string>
    <string name="scan_qr">"Scan QR code"</string>
    <string name="menu_title">"Home"</string>
    <string name="setting_text">Setting</string>
    <string name="profile_text">Profile</string>
    <string name="notification_text">Notification</string>
    <string name="history_text">History</string>
    <string name="navigate">Navigate</string>
    <string name="hello">Hello, </string>
    <string name="logout_title">Do you want to logout?</string>
    <string name="logout_description">Confirm that you want to logout</string>
    <string name="logout_confirm">Yes I do</string>
    <string name="logout_decline">Nuh uh</string>
    <string name="delete_account_title">Do you want to delete your account?</string>
    <string name="delete_account_description">Delete account means delete all your infomation!\n Do you really want to delete?</string>
    <string name="upload_image_title">How do you want to upload your image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="change_password_description">You have passed the verification, you can change your password now</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="reports_text">Reports</string>
    <string name="peding_reports_text">Pending Reports</string>
    <string name="report_success">You have successfully reported a pothole.</string>
    <string name="reported_at">Reported at: </string>
    <string name="unknown">Unknown</string>
    <string name="severity">Severity: </string>
    <string name="time">Time: </string>
    <string name="question_push_pothole">Do you want to push this pothole to the server?</string>
    <string name="number_potholes">Number of Potholes</string>
    <string name="potholes_type">Pothole Type</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="view_on_map">View on Map</string>
    <string name="upload_image">Upload image</string>
    <string name="capture_image">Capture image</string>
    <string name="road">Road: </string>
    <string name="time_encountered">Time encountered: </string>
    <string name="pothole_title">You have encountered a pothole with info:</string>
    <string name="severity_text">severity</string>



    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1IjoiaGllcmlzcyIsImEiOiJjbTNuZmwya3ExNnVpMmxzZG9wOGNyN24xIn0.Bnsn24Jk7ZmetYO_MxQHcA</string>
</resources>