<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background_intro"
    tools:context=".Authen.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/grandstander_bold"
                    android:text="@string/action_sign_up1"
                    android:textAlignment="center"
                    style="@style/TEXT"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/signup_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/user"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:fontFamily="@font/grandstander_regular"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:padding="10dp"
                            style="@style/TEXT_hint"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/signup_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/lock"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:fontFamily="@font/grandstander_regular"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            style="@style/TEXT_hint"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/signup_confirmpassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/key"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:fontFamily="@font/grandstander_regular"
                            android:hint="@string/re_pass"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            style="@style/TEXT_hint"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/signup_email"
                            style="@style/TEXT_hint"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/email"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:fontFamily="@font/grandstander_regular"
                            android:hint="@string/prompt_email"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/signup_phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="10dp"
                            android:drawableStart="@drawable/phone"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:fontFamily="@font/grandstander_regular"
                            android:hint="@string/phone_number"
                            android:inputType="text"
                            android:padding="10dp"
                            style="@style/TEXT_hint"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/signup_button"
                            android:layout_width="230dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/signin_button_background"
                            android:fontFamily="@font/grandstander_semi_bold"
                            android:text="@string/action_sign_up_short"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/signup_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            android:fontFamily="@font/grandstander_regular"
                            android:text="@string/already_have_account"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/signup_text3"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/grandstander_semi_bold"
                            android:text="@string/action_sign_in_short"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>