<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".Setting.DeleteAccountRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/setting_popups"
        android:padding="20dp"
        android:elevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="0dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/quit"
                app:tint="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quit_button"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="" />
        </RelativeLayout>

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_title"
            android:fontFamily="@font/grandstander_semi_bold"
            android:textColor="@color/red"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/verify_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_description"
            android:gravity="center"
            android:fontFamily="@font/grandstander_regular"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/signin_button_background"
                android:fontFamily="@font/grandstander_regular"
                android:text="@string/logout_confirm"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decline_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/signin_button_background"
                android:fontFamily="@font/grandstander_regular"
                android:text="@string/logout_decline"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>