<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".Profile.EditImage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/main_user_box_background"
        android:padding="20dp"
        android:elevation="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="0dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/quit"
                app:tint="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quit_button"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="" />
        </RelativeLayout>

        <TextView
            android:id="@+id/verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/grandstander_semi_bold"
            android:gravity="center"
            android:text="@string/upload_image_title"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/choose_from_gallery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_gallery"
            android:fontFamily="@font/grandstander_regular"
            android:background="@drawable/signin_button_background"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/take_a_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/take_a_photo"
            android:fontFamily="@font/grandstander_regular"
            android:background="@drawable/signin_button_background"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>
</FrameLayout>