<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Intro_background"
    tools:context=".Authen.ChangePassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/button_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/back" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/back_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/forgot_password_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="40dp"
                            android:fontFamily="@font/grandstander_semi_bold"
                            android:text="@string/reset_password"
                            android:textSize="40sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/forgot_password_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/grandstander_regular"
                            android:text="@string/change_password_description"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="20dp"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:fontFamily="@font/grandstander_regular"
                        android:hint="@string/new_password"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="50dp"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="16dp"
                        android:ems="10"
                        android:fontFamily="@font/grandstander_regular"
                        android:hint="@string/confirm_new_password"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/confirm_button"
                        android:layout_width="230dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="70dp"
                        android:background="@drawable/signin_button_background"
                        android:fontFamily="@font/grandstander_semi_bold"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>